added the grid areas and base HTML for each grid area

--- a/grid.html
+++ b/grid.html
@@ -3,16 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="grid.css">
     <title>Grid Project</title>
 </head>
 <body>
     <section id="grid"> <!-- Gives margin and padding from the edges of the screen -->
-
+        <div class="card logo"><p>logo</p></div>
+        <div class="card navbar">
+            <!-- probably shouldve used 'nav' instead of 'div' but thats not the point of this assignment -->
+            <p>just testing [navbar]</p>
+        </div>
+        <div class="card account">LOG-IN / REGISTRATION</div>
+        <div class="card banner">header promo banner</div>
+        <div class="card text-a">text A.</div>
+        <div class="card text-b">text B.</div>
+        <div class="card text-c">text C.</div>
+        <div class="card text-d">text D.</div>
+        <div class="card list">
+            <p>just testing [list]</p>
+        </div>
+        <div class="card text-big">
+            <p>just testing [text-big]</p>
+        </div>
+        <div class="card box-r">
+            <p>just testing [box-R]</p>
+        </div>
+        <div class="card box-l">
+            <p>just testing [box-L</p>
+        </div>
+        <div class="card footer">footer</div>
     </section>
 </body>
 </html>
-
-fair enough
-dont take *too* long though, just be careful
-
-Flying Fish Company LLC
