added grid insides and formatted grid nicely

--- a/grid.html
+++ b/grid.html
@@ -23,13 +23,26 @@
             <p>just testing [list]</p>
         </div>
         <div class="card text-big">
+            <h2 class="head">Lorum ipsum dolor sit amet</h2>
+            <h3>heading 1</h3>
             <p>just testing [text-big]</p>
+            <h3>heading 2</h3>
+            <p>exploding</p>
         </div>
         <div class="card box-r">
-            <p>just testing [box-R]</p>
+            <div class="card">
+                <h3 class="head">Lorum ipsum</h3>
+            </div>
+            <div class="card">
+                <h3 class="head">Lorum ipsum</h3>
+            </div>
+            <div class="card">
+                <h3 class="head">Lorum ipsum</h3>
+            </div>
         </div>
         <div class="card box-l">
-            <p>just testing [box-L</p>
+            <h2 class="head">Lorum ipsum dolor sit amet</h2>
+            <p>just testing [box-L]</p>
         </div>
         <div class="card footer">footer</div>
     </section>
